--- a/Pages/index.html
+++ b/Pages/index.html
@@ -34,8 +34,65 @@
         </nav>
 
         <main class="content">
-            <h2>Welcome to Dolphin CRM Dashboard</h2>
-            <p>Use the sidebar to navigate through the application.</p>
+            <h>Dashboard</h>
+            <div class="content-card">
+                <div class="filter-tabs">
+                    <button class="filter-tab">All</button>
+                    <button class="filter-tab">Sales Leads</button>
+                    <button class="filter-tab">Support</button>
+                    <button class="filter-tab">Assigned to Me</button>
+                </div>
+                    <table class="contacts-table">
+                        <thead>
+                            <tr>
+                                <th>Name</th>
+                                <th>Email</th>
+                                <th>Company</th>
+                                <th>Type</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Person 1 Name</td>
+                                <td>person1@example.com</td>
+                                <td>Company 1</td>
+                                <td>Sales Lead</td>
+                            </tr>
+                            <tr>
+                                <td>Person 2 Name</td>
+                                <td>person2@example.com</td>
+                                <td>Company 2</td>
+                                <td>Support</td>
+                            </tr>
+                            <tr>
+                                <td>Person 3 Name</td>
+                                <td>person3@example.com</td>
+                                <td>Company 3</td>
+                                <td>Sales Lead</td>
+                            </tr>
+                            <tr>
+                                <td>Person 4 Name</td>
+                                <td>person4@example.com</td>
+                                <td>Company 4</td>
+                                <td>Support</td>
+                            </tr>
+                            <tr>
+                                <td>Person 5 Name</td>
+                                <td>person5@example.com</td>
+                                <td>Company 5</td>
+                                <td>Sales Lead</td>
+                            </tr>
+                            <tr>
+                                <td>Person 6 Name</td>
+                                <td>person6@example.com</td>
+                                <td>Company 6</td>
+                                <td>Support</td>
+                            </tr>
+
+                        </tbody>
+
+                    </table>
+            </div>
         </main>
 
     </div>
