finished dashboard basics

--- a/Pages/index.html
+++ b/Pages/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="images/logo.png" alt="Dolphin Logo">
+        <img class="logo" src="../images/logo.jpg" alt="Dolphin Logo">
         <h1 class = "header-title">Dolphin CRM</h1>
     </header>
 
@@ -34,7 +34,10 @@
         </nav>
 
         <main class="content">
-            <h>Dashboard</h>
+            <div class="dashboard-header">
+                <h2 class="dashboard-title">Dashboard</h2>
+                <button class="add-contact-button">+ Add New Contact</button>
+            </div>
             <div class="content-card">
                 <div class="filter-tabs">
                     <button class="filter-tab">All</button>
@@ -49,6 +52,7 @@
                                 <th>Email</th>
                                 <th>Company</th>
                                 <th>Type</th>
+                                <th></th>
                             </tr>
                         </thead>
                         <tbody>
@@ -57,36 +61,42 @@
                                 <td>person1@example.com</td>
                                 <td>Company 1</td>
                                 <td>Sales Lead</td>
+                                <td><a href="#">View</a></td>
                             </tr>
                             <tr>
                                 <td>Person 2 Name</td>
                                 <td>person2@example.com</td>
                                 <td>Company 2</td>
                                 <td>Support</td>
+                                <td><a href="#">View</a></td>
                             </tr>
                             <tr>
                                 <td>Person 3 Name</td>
                                 <td>person3@example.com</td>
                                 <td>Company 3</td>
                                 <td>Sales Lead</td>
+                                <td><a href="#">View</a></td>
                             </tr>
                             <tr>
                                 <td>Person 4 Name</td>
                                 <td>person4@example.com</td>
                                 <td>Company 4</td>
                                 <td>Support</td>
+                                <td><a href="#">View</a></td>
                             </tr>
                             <tr>
                                 <td>Person 5 Name</td>
                                 <td>person5@example.com</td>
                                 <td>Company 5</td>
                                 <td>Sales Lead</td>
+                                <td><a href="#">View</a></td>
                             </tr>
                             <tr>
                                 <td>Person 6 Name</td>
                                 <td>person6@example.com</td>
                                 <td>Company 6</td>
                                 <td>Support</td>
+                                <td><a href="#">View</a></td>
                             </tr>
 
                         </tbody>
