--- a/Pages/index.html
+++ b/Pages/index.html
@@ -34,8 +34,8 @@
         </nav>
 
         <main class="content">
-            <div class="dashboard-header">
-                <h2 class="dashboard-title">Dashboard</h2>
+            <div class="page-header">
+                <h2 class="page-title">Dashboard</h2>
                 <button class="add-contact-button">+ Add New Contact</button>
             </div>
             <div class="content-card">
