--- a/Pages/login.html
+++ b/Pages/login.html
@@ -20,8 +20,10 @@
             </div>
             <form action="login.php" method="post">
                 <div class="login-form-group">
-                    <input type="text" id="username" name="username" required>
-                    <input type="password" id="password" name="password" required>
+                    <label for="username">Username:</label>
+                    <input type="text" id="username" name="username" placeholder="Enter your username" required>
+                    <label for="password">Password:</label>
+                    <input type="password" id="password" name="password" placeholder="Enter your password" required>
                     <button type="submit">Log In</button>
                 </div>
             </form>
