new contact page

--- a/Pages/new-contact.html
+++ b/Pages/new-contact.html
@@ -47,8 +47,27 @@
                             <option value="ms">Ms.</option>
                             <option value="dr">Dr.</option>
                         </select>
-                        
+                        <label for="first-name" class="new-contact-label">First Name</label>
+                        <input type="text" id="first-name" name="first-name" class="new-contact-input">
+                        <label for="last-name" class="new-contact-label">Last Name</label>
+                        <input type="text" id="last-name" name="last-name" class="new-contact-input">
+                        <label for="email" class="new-contact-label">Email</label>
+                        <input type="email" placeholder="someone@example.com" id="email" name="email" class="new-contact-input">
+                        <label for="Telephone" class="new-contact-label">Telephone</label>
+                        <input type="tel" id="Telephone" name="Telephone" class="new-contact-input">
+                        <label for="company" class="new-contact-label">Company</label>
+                        <input type="text" id="company" name="company" class="new-contact-input">
+                        <label for="type" class="new-contact-label">Type</label>
+                        <input type="text" id="type" name="type" class="new-contact-input">
+                        <label for="asigned-to" class="new-contact-label">Assigned To</label>
+                         <select id="assigned-to" name="assigned-to" class="new-contact-input">
+                            <option value="User1">User1</option>
+                            <option value="User2">User2</option>
+                            <option value="User3">User3</option>
+                            <option value="User4">User4</option>
+                        </select>
                     </div>
+                    <button type="submit" class="save-button">Save</button>
                 </form>
             </div>
         </main>
