--- a/add_contact.html
+++ b/add_contact.html
@@ -21,7 +21,7 @@
             </div>
             <div class="menu-item">
                 <img src ="images/new_contact_icon.png" alt="New Contact Icon" class="menu-icon">
-                <a href="new-contact.html" class="menu-link">New Contact</a>
+                <a href="add_contact.html" class="menu-link">New Contact</a>
             </div>
             <div class="menu-item">
                 <img src ="images/users_icon.png" alt="Users Icon" class="menu-icon">
