--- a/contact_details.html
+++ b/contact_details.html
@@ -26,7 +26,7 @@
 
       <div class="menu-item">
         <img src="images/new_contact_icon.png" alt="New Contact Icon" class="menu-icon">
-        <a href="new-contact.html" class="menu-link">New Contact</a>
+        <a href="add_contact.html" class="menu-link">New Contact</a>
       </div>
 
       <div class="menu-item">
@@ -48,7 +48,7 @@
         <div class="contact-header-top">
 
           <div class="contact-title-section">
-            <img src="images/user-avatar.png" alt="User Avatar" class="contact-avatar" id="contactAvatar">
+            <img src="images/user_avatar.png" alt="User Avatar" class="contact-avatar" id="contactAvatar">
 
             <div class="contact-title-info">
               <h2 class="contact-name" id="contactFullName"></h2>
